--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,53 +1,22 @@
-{% extends "main.html" %}
-
-{% block content  %}
+{% extends "main.html" %} {% block content %}
 
 <style>
-    .home-container{
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-    }
+  .home-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+  }
 </style>
 
 <div class="home-container">
+  <div>{% include "base/topics_component.html" %}</div>
 
-    <div>
-        <h3>Browse Topics </h3>
-        <hr>
+  <div>
+    <h5>{{room_count}} rooms available</h5>
+    <a href='{% url "create-room" %}'> Create Room</a>
+    {% include "base/feed_component.html" %}
+  </div>
 
-        <div>
-            <a href="{% url 'home' %}">All</a><br>
-        </div>
-
-        {% for topic in topics %}
-        <div>
-            <a href="{% url 'home' %}?q={{topic.name}}">{{ topic.name }}</a><br>
-        </div>
-        {% endfor %}
-    </div>
-
-    <div>
-        <h5>{{room_count}} rooms available</h5>
-        <a href='{% url "create-room" %}'> Create Room</a>
-    
-    {% for room in rooms  %}
-    <div>
-        {% comment %} BAD UES <h2><a href='/room/{{room.id}}'>{{ room.name }}</a></h2> {% endcomment %} 
-
-        {% if request.user == room.host %}
-            <a href='{% url "update-room" room.id %}'> Update Room</a>
-            <a href='{% url "delete-room" room.id %}'> Delete Room</a>
-        {% endif %}
-
-        <span>@{{room.host.username}}</span>
-        <h2><a href='{% url "room" room.id %}'>{{ room.name }}</a></h2>
-        <small>{{room.topic.name}}</small>
-        <hr />
-    </div>
-    {% endfor %}
-
-    </div>
+  <div>{% include "base/activity_component.html" %}</div>
 </div>
 
-{% endblock  %}
-
+{% endblock %}
