--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styels/main.css' %}">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styels/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
+
+  <body>
+
     {% include "navbar.html" %} 
     {% if messages %}
     <ul class="messages">
@@ -16,10 +20,12 @@
         {% endfor %}
     </ul>
     {% endif %}
-
-
-     {% block content  %}
+    
+    {% block content  %}
      
-     {% endblock  %} 
-</body>
+    {% endblock  %} 
+
+    <script src="{% static 'script/script.js' %}"></script>
+  </body>
 </html>
+
