--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
         <div class="header__user">
           <a href="{% url 'user-profile' request.user.id  %}">
             <div class="avatar avatar--medium active">
-              <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+              <img src="{% static 'images/avatar.svg' %}" />
             </div>
             <p>{{request.user}} <span>@{{request.user.username}}</span></p>
           </a>
